--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 /*-----------Guia 61b Guia TPI-2022 CICLO II---------------*/
 -->
 <head>
-	<title>Ejemplo web api</title>
+	<title>Ejemplo Web API - GG20031</title>
 	<meta charset="utf-8"  />
 <LINK REL=StyleSheet HREF="estilo.css" TYPE="text/css" MEDIA=screen>
 <script src="codigo.js"></script>
